--- a/src/components/Container/index.module.scss
+++ b/src/components/Container/index.module.scss
@@ -3,4 +3,11 @@
   width: 100%;
   margin: 0 auto;
   padding: 10px;
+
+  @media (max-width: 1300px) {
+    padding-left: 70px;
+  }
+  @media (max-width: 991px) {
+    padding-left: 10px;
+  }
 }
