redirection, image issues fixed

--- a/src/pages/ShowOrder/index.module.scss
+++ b/src/pages/ShowOrder/index.module.scss
@@ -3,3 +3,13 @@
     text-transform: capitalize;
   }
 }
+.image {
+  max-width: 600px;
+  width: 100%;
+
+  img {
+    width: 100%;
+    object-fit: contain;
+    display: block;
+  }
+}
