--- a/src/components/SideBar/index.scss
+++ b/src/components/SideBar/index.scss
@@ -5,6 +5,7 @@
   transition: 0.3s;
   width: 60px;
   overflow: hidden;
+  // position: relative;
   z-index: 100;
 
   &.active {
@@ -74,4 +75,10 @@
   @media (max-width: 991px) {
     height: 72px;
   }
+}
+
+.logoutBlock {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
