--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f5f5f5 !important;
 }
 
 code {
@@ -14,4 +15,10 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+@media (min-width: 991px) {
+  .table-full-width {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
 }
